Refactor loan management system: - Updated DTOMapper to remove guarantor fields and include aging days calculation. - Modified CustomerRepository to filter out deleted customers and added method to count all customers including deleted. - Changed EmployeeRepository to return Optional for findByFirstName. - Updated ExpenseRepository to use ExpenseCategory for category filtering. - Removed GuarantorRepository as it is no longer needed. - Enhanced CustomerService to calculate aging days for customers due today and added method to get eligible guarantors. - Improved DailyNotificationsService to send missed emails on startup and sort due customers by aging days. - Added employee update and delete methods in EmployeeService. - Enhanced LoansService to validate guarantor exposure and ensure the guarantor is not the same as the customer. - Updated PaymentsService to handle loan payment retrieval more gracefully. - Improved ReportService to calculate aging analysis based on loan aging days. - Enhanced UserService to return a new User object when not found. - Added PDF export functionality in UIHelper for generating reports. - Updated CustomerView and LoanView FXML files to remove unnecessary fields and add guarantor selection. - Added loan surcharge policy settings in SettingsView FXML.